# django-caps

./: .gitignore  .readthedocs.yaml  README.rst  TODO.md  pyproject.toml
caps/: README.md  admin.py  apps.py  backends.py  middleware.py  permissions.py  serializers.py  signals.py  urls.py
caps/locale/fr/LC_MESSAGES/: django.po
caps/migrations/: 0001_initial.py  0002_alter_agent_options.py
caps/models/: __init__.py  access.py  agent.py  capability.py  capability_set.py  nested.py  object.py  owned.py  reference.py
caps/utils/: __init__.py
caps/views/: __init__.py  api.py  base.py  common.py  generics.py  mixins.py
docs/source/: guide.rst  project.rst
docs/source/api/: 10_models.rst  20_views.rst
docs/source/guide/: 00-overview.rst  00-quickstart.rst  01-overview.rst  90-capability-vs-acl.rst  overview.rst
docs/source/project/: 90_todo.rst
docs/source/static/: .$caps-models.drawio.bkp  caps-models.drawio
instance/: settings.py  urls.py
pages/: genindex.html  index.html  objects.inv
pages/_modules/caps/views/: common.html  mixins.html
pages/_sources/project/: 90_todo.rst.txt
pages/api/: 30_serializers.html  71_urls.html  80_utils.html
pages/guide/: 01-overview.html
tests/: conftest.py  test_backends.py  test_end_to_end.py  test_middleware.py  test_model_access.py  test_model_agent.py  test_model_capability.py  test_model_capability_set.py  test_model_nested.py  test_model_object.py  test_model_reference.py  test_serializers.py  test_view_mixins.py  test_views_api.py  test_views_generics.py  test_views_mixins.py
tests/app/: admin.py  models.py  serializers.py  urls.py  views.py
tests/app/migrations/: 0001_initial.py
