[project]
name = "django-caps"
description = "Capability based object permissions for Django."
version = "0.0.3"
authors = [{ name="Thomas Baquet", email="thomas@oxylus.app" }]
readme = "README.rst"
license = "MPL-2.0"

classifiers = [
    "Framework :: Django",
    "Framework :: Django :: 5.0",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Security",
    "Topic :: Software Development :: Object Brokering",
    "Intended Audience :: Developers",
]


dependencies = [
    "Django>=5",
    "djangorestframework>=3",
    "django-filter>=25",
]

[dependency-groups]
dev = [
    "ipython==8.29.0.*",
    "pre-commit==3.1.*",
    "black==23.3.*",
    "ruff==0.0.*",
    "pytest==8.*",
    "pytest-django==4.*",
    "pytest-asyncio==0.25.3.*",
]

docs = [
    "Sphinx==8.*",
    "sphinx-rtd-theme==3.*",
    "sphinx-autodoc-typehints==3.*",
]


[tool.setuptools]
packages = ["caps"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["caps"]



[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "instance.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]


[tool.black]
line-length = 120
exclude = '''
    /(
          \.egg
        | \.git
        | \.hg
        | \.tox
        | \._build
        | \.build
        | \.bulk-out
        | \.dist
        | \.__pycache__
        | \.venv
        | \.migrations
        | \.static
        | \.ox/settings
        | \.scripts
    )
'''


[tool.ruff]
line-length = 120
exclude = [
    "egg",
    "git",
    "hg",
    "tox",
    "_build",
    "build",
    "dist",
    "__pycache__",
    "venv",
    "*/migrations",
    "*/static",
    "scripts/",
]


[tool.semantic_release]
version_variables = ["caps/__init__.py:__version__"]
version_toml = [
    "pyproject.toml:tool.poetry.version",
]
